# thirukural

./: .dockerignore  Dockerfile  README.md  database.db  docker-compose.yaml  env_sample  pyproject.toml  requirements.txt
app/: app.py  database.db  security.py  settings.py  start.sh  thirukural.json
app/database/: auth.py  database.py  model.py
app/group/: kural.py  user.py
tofu-terraform-aci/: create_container_instance.tf  create_resource_group.tf  output.tf  provider.tf  variables.tf
